# Studies

Class/: dataclass.py  metaclass.py
Generators/: infinite.py  (+1 more)
Oauth/auth-server/oauth/backend/: .env  Dockerfile  compose.yml  pyproject.toml
Oauth/auth-server/oauth/backend/src/: __init__.py
Oauth/auth-server/oauth/backend/src/app/core/handlers/: error.py
Oauth/auth-server/oauth/backend/src/app/core/interfaces/: auth.py  dto.py  facade.py  firebase_login.py  oauth_repository.py  repository.py  session_repository.py  use_case.py
Oauth/auth-server/oauth/backend/src/app/orchestrators/: login.py  retrieve_token.py
Oauth/auth-server/oauth/backend/src/app/use_cases/: create_account.py  create_session.py  get_oauth_config.py  get_session.py  get_token.py  login.py  save_token.py  verify_pcke_token.py
Oauth/auth-server/oauth/backend/src/domain/entities/: base.py  session.py  token.py
Oauth/auth-server/oauth/backend/src/infra/adapters/auth/: firebase_auth.py
Oauth/auth-server/oauth/backend/src/infra/adapters/repositories/: oauth_repository.py  session_repository.py
Oauth/auth-server/oauth/backend/src/infra/core/interfaces/: create_session.py  database.py  retrieve_token.py  signup.py
Oauth/auth-server/oauth/backend/src/infra/database/mongo/: __init__.py
Oauth/auth-server/oauth/backend/src/infra/database/redis/: __init__.py
Oauth/auth-server/oauth/backend/src/infra/entrypoints/controllers/: create_session.py  get_oauth_config.py  get_session.py  get_token.py  login.py  signup.py
Oauth/auth-server/oauth/backend/src/infra/entrypoints/routes/: __init__.py
(+13 files in other folders)
